shaku_derive/tests/ui/submodule_service_attributes.stderr
error: Submodule components cannot have attributes
  --> tests/ui/submodule_service_attributes.rs:31:35
   |
31 |             components = [#[lazy] ComponentTrait],
   |                                   ^^^^^^^^^^^^^^

error: Providers cannot have attributes
  --> tests/ui/submodule_service_attributes.rs:44:26
   |
44 |             providers = [#[lazy] ProviderTrait]
   |                          ^
